--- a/src/app/components/informes/informe-precio/informe-precio.component.html
+++ b/src/app/components/informes/informe-precio/informe-precio.component.html
@@ -31,12 +31,12 @@
                   class="dropdown-toggle menu-color">Marca
                 </a>
                 <ul class="collapse list-unstyled" id="filterMArk">
-
-                  <li *ngFor="let origin of originData">
+                  <li *ngFor="let origin of originData; let marcaCheck = index">
                     <label class="control control--checkbox">
-                      <input class="marca" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      <input class="marca" type="checkbox" name="{{origin.value}}"
                         (change)="validateCheckFilter($event.target.checked, origin, $event.target.className, $event.target)"
-                        id="{{origin.value}}" />
+                        id="{{'marca'+marcaCheck}}"
+                        value="{{origin.value !== '' ? validateCheckOrigin(origin.value, marcaCheck) : origin.value}}" />
                       {{origin.text}}
                     </label>
                   </li>
@@ -48,11 +48,12 @@
                   class="dropdown-toggle menu-color">Categoria
                 </a>
                 <ul class="collapse list-unstyled" id="filterCategory">
-                  <li *ngFor="let category of categoryData">
+                  <li *ngFor="let category of categoryData; let categoriaCheck = index">
                     <label class="control control--checkbox">
                       <input class="categoria" type="checkbox" value="{{category.value}}" name="{{category.value}}"
                         (change)="validateCheckFilter($event.target.checked, category, $event.target.className, $event.target)"
-                        id="{{category.value}}" />
+                        id="{{'categoria'+categoriaCheck}}"
+                        value="{{category.value !== '' ? validateCheckCategory(category.value, categoriaCheck) : category.value}}" />
                       {{category.text}}
                     </label>
                   </li>
@@ -64,13 +65,13 @@
                   class="dropdown-toggle menu-color">Sub categoría
                 </a>
                 <ul class="collapse list-unstyled" id="filterSubCategory">
-                  <li *ngFor="let subcategory of subCategoryData">
+                  <li *ngFor="let subcategory of subCategoryData; let subCategoriaCheck = index">
                     <label class="control control--checkbox">
-
                       <input class="subCategoria" type="checkbox" value="{{subcategory.value}}"
                         name="{{subcategory.value}}"
                         (change)="validateCheckFilter($event.target.checked, subcategory, $event.target.className, $event.target)"
-                        id="{{subcategory.value}}" />
+                        id="{{'subcategoria'+subCategoriaCheck}}"
+                        value="{{subcategory.value !== '' ? validateCheckSubCategory(subcategory.value, subCategoriaCheck) : subcategory.value}}" />
                       {{subcategory.text}}
                     </label>
                   </li>
@@ -83,12 +84,13 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterTipoPrenda">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let tipoprenda of tipoPrendaData">
+                    <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck = index">
                       <label class="control control--checkbox">
                         <input class="tipoPrenda" type="checkbox" value="{{tipoprenda.value}}"
                           name="{{tipoprenda.value}}"
                           (change)="validateCheckFilter($event.target.checked, tipoprenda, $event.target.className, $event.target)"
-                          id="{{tipoprenda.value}}" />
+                          id="{{'tipoprenda'+tipoPrendaCheck}}"
+                          value="{{tipoprenda.value !== '' ? validateCheckTipoPrenda(tipoprenda.value, tipoPrendaCheck) : tipoprenda.value}}" />
                         {{tipoprenda.text}}
                       </label>
                     </li>
@@ -102,10 +104,12 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterColor">
                   <div class="overflow-auto checkboxAlign">
-                    <div *ngFor="let color of colorData">
-                      <input class="color colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}" title="{{color.text}}"
+                    <div *ngFor="let color of colorData; let colorCheck = index">
+                      <input class="color colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        title="{{color.text}}"
                         (change)="validateCheckFilter($event.target.checked, color, $event.target.className, $event.target)"
-                        id="{{color.value}}" [ngStyle]="{'background': color.hexa}" />
+                        id="{{'color'+colorCheck}}" [ngStyle]="{'background': color.hexa}"
+                        value="{{color.value !== '' ? validateCheckColor(color.value, colorCheck) : color.value}}" />
                     </div>
                   </div>
                 </ul>
@@ -117,12 +121,13 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let composicion of composicionData">
+                    <li *ngFor="let composicion of composicionData; let composicionCheck = index">
                       <label class="control control--checkbox">
                         <input class="composicion" type="checkbox" value="{{composicion.value}}"
                           name="{{composicion.value}}"
                           (change)="validateCheckFilter($event.target.checked, composicion, $event.target.className, $event.target)"
-                          id="{{composicion.value}}" />
+                          id="{{'composicion'+composicionCheck}}"
+                          value="{{composicion.value !== '' ? validateCheckComposicion(composicion.value, composicionCheck) : composicion.value}}" />
                         {{composicion.text}}
                       </label>
                     </li>
@@ -183,12 +188,12 @@
                   class="dropdown-toggle menu-color">Marca
                 </a>
                 <ul class="collapse list-unstyled" id="filterMArk">
-
-                  <li *ngFor="let origin of originData">
+                  <li *ngFor="let origin of originData; let marcaCheck = index">
                     <label class="control control--checkbox">
-                      <input class="marca2" type="checkbox" value="{{origin.value}}" name="{{origin.value}}"
+                      <input class="marca2" type="checkbox" name="{{origin.value}}"
                         (change)="validateCheckFilter2($event.target.checked, origin, $event.target.className, $event.target)"
-                        id="{{origin.value}}" />
+                        id="{{'marca2'+marcaCheck}}"
+                        value="{{origin.value !== '' ? validateCheckOrigin2(origin.value, marcaCheck) : origin.value}}" />
                       {{origin.text}}
                     </label>
                   </li>
@@ -200,11 +205,12 @@
                   class="dropdown-toggle menu-color">Categoria
                 </a>
                 <ul class="collapse list-unstyled" id="filterCategory">
-                  <li *ngFor="let category of categoryData">
+                  <li *ngFor="let category of categoryData; let categoriaCheck2 = index">
                     <label class="control control--checkbox">
                       <input class="categoria2" type="checkbox" value="{{category.value}}" name="{{category.value}}"
                         (change)="validateCheckFilter2($event.target.checked, category, $event.target.className, $event.target)"
-                        id="{{category.value}}" />
+                        id="{{'categoria2'+categoriaCheck2}}"
+                        value="{{category.value !== '' ? validateCheckCategory2(category.value, categoriaCheck2) : category.value}}" />
                       {{category.text}}
                     </label>
                   </li>
@@ -216,13 +222,13 @@
                   class="dropdown-toggle menu-color">Sub categoría
                 </a>
                 <ul class="collapse list-unstyled" id="filterSubCategory">
-                  <li *ngFor="let subcategory of subCategoryData">
+                  <li *ngFor="let subcategory of subCategoryData; let subCategoriaCheck2 = index">
                     <label class="control control--checkbox">
-
                       <input class="subCategoria2" type="checkbox" value="{{subcategory.value}}"
                         name="{{subcategory.value}}"
                         (change)="validateCheckFilter2($event.target.checked, subcategory, $event.target.className, $event.target)"
-                        id="{{subcategory.value}}" />
+                        id="{{'subcategoria2'+subCategoriaCheck2}}"
+                        value="{{subcategory.value !== '' ? validateCheckSubCategory2(subcategory.value, subCategoriaCheck2) : subcategory.value}}" />
                       {{subcategory.text}}
                     </label>
                   </li>
@@ -235,29 +241,32 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterTipoPrenda">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let tipoprenda of tipoPrendaData">
+                    <li *ngFor="let tipoprenda of tipoPrendaData; let tipoPrendaCheck2 = index">
                       <label class="control control--checkbox">
                         <input class="tipoPrenda2" type="checkbox" value="{{tipoprenda.value}}"
                           name="{{tipoprenda.value}}"
                           (change)="validateCheckFilter2($event.target.checked, tipoprenda, $event.target.className, $event.target)"
-                          id="{{tipoprenda.value}}" />
+                          id="{{'tipoprenda2'+tipoPrendaCheck2}}"
+                          value="{{tipoprenda.value !== '' ? validateCheckTipoPrenda2(tipoprenda.value, tipoPrendaCheck2) : tipoprenda.value}}" />
                         {{tipoprenda.text}}
                       </label>
                     </li>
                   </div>
                 </ul>
               </li>
-              
+
               <li class="active mt-2">
                 <a href="#filterColor" data-toggle="collapse" aria-expanded="false"
                   class="dropdown-toggle menu-color">Color
                 </a>
                 <ul class="collapse list-unstyled" id="filterColor">
                   <div class="overflow-auto checkboxAlign">
-                    <div *ngFor="let color of colorData">
-                      <input class="color2 colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}" title="{{color.text}}"
+                    <div *ngFor="let color of colorData; let colorCheck2 = index">
+                      <input class="color2 colorStyles" type="checkbox" value="{{color.value}}" name="{{color.value}}"
+                        title="{{color.text}}"
                         (change)="validateCheckFilter2($event.target.checked, color, $event.target.className, $event.target)"
-                        id="{{color.value}}" [ngStyle]="{'background': color.hexa}" />
+                        id="{{'color2'+colorCheck2}}" [ngStyle]="{'background': color.hexa}"
+                        value="{{color.value !== '' ? validateCheckColor2(color.value, colorCheck2) : color.value}}" />
                     </div>
                   </div>
                 </ul>
@@ -269,12 +278,13 @@
                 </a>
                 <ul class="collapse list-unstyled" id="filterComposicion">
                   <div class="overflow-auto container-scroll">
-                    <li *ngFor="let composicion of composicionData">
+                    <li *ngFor="let composicion of composicionData; let composicionCheck2 = index">
                       <label class="control control--checkbox">
                         <input class="composicion2" type="checkbox" value="{{composicion.value}}"
                           name="{{composicion.value}}"
                           (change)="validateCheckFilter2($event.target.checked, composicion, $event.target.className, $event.target)"
-                          id="{{composicion.value}}" />
+                          id="{{'composicion2'+composicionCheck2}}"
+                          value="{{composicion.value !== '' ? validateCheckComposicion2(composicion.value, composicionCheck2) : composicion.value}}" />
                         {{composicion.text}}
                       </label>
                     </li>
